k8s-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prediction
  namespace: mlops
  labels:
    app: prediction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prediction
  template:
    metadata:
      labels:
        app: prediction
        kubernetes.io/name: prediction
        kubernetes.io/part-of: mlops
    spec:
      containers:
      - name: prediction-container
        image: alokkodzz/mlops:v1
        imagePullPolicy: Always 
        ports:
        - containerPort: 6000
