k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prediction-svc       
  namespace: mlops
spec:
  selector:
    app: prediction      
    kubernetes.io/name: prediction
    kubernetes.io/part-of: mlops
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6000
