k8s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prediction-proxy
  namespace: mlops
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: "Prediction-LB"
spec:
  ingressClassName: alb
  rules:
    - host: prediction.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: Prediction-svc
                port:
                  number: 80
